--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -23,14 +23,16 @@ As usual, intermediate and posterior values ($\rho^\dagger$, $\rho^\ddagger$, $\
 \subsubsection{Work Report}\label{sec:workreport}
 A work-report, of the set $\mathbb{W}$, is defined as a tuple of the work-package specification $s$, the refinement context $x$, and the core-index (\ie on which the work is done) as well as the authorizer hash $a$ and output $\mathbf{o}$, a segment-root lookup dictionary $\wr¬srlookup$, and finally the results of the evaluation of each of the items in the package $\mathbf{r}$, which is always at least one item and may be no more than $\mathsf{I}$ items. Formally:
 \begin{equation}\label{eq:workreport}
-  \mathbb{W} \equiv \tuple{
-    \isa{s}{\mathbb{S}},\ 
+\mathbb{W} \equiv \tuple{
+  \begin{aligned}
+    &\isa{s}{\mathbb{S}},\ 
     \isa{x}{\mathbb{X}},\ 
     \isa{c}{\N_\mathsf{C}},\ 
-    \isa{a}{\H},\ 
-    \isa{\mathbf{o}}{\Y},\ 
+    \isa{a}{\H},\\
+    &\isa{\mathbf{o}}{\Y},\ 
     \isa{\wr¬srlookup}{\dict{\H}{\H}},\ 
     \isa{\mathbf{r}}{\seq{\mathbb{L}}_{1:\mathsf{I}}}
+  \end{aligned}
 }
 \end{equation}
 
