--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -91,7 +91,7 @@ We further define the accumulation priority queue function $Q$, which provides t
     &(\mathbf{r}, \mathbf{a}) \mapsto \begin{cases}
       [] &\when w = \none \\
       \mathbf{g} \frown Q(E(\mathbf{r}, \mathbf{g}), \mathbf{a} \cup \srmap(\mathbf{g}))\!\!\!\! &\otherwise \\
-      \where \mathbf{g} = [w \mid (w, \{\}) \orderedin \mathbf{r}]\!\!\!\!\!\!\!\!\! &
+      \multicolumn{2}{l}{\quad\where \mathbf{g} = [w \mid (w, \{\}) \orderedin \mathbf{r}]}
     \end{cases}\!\!\!\!
   \end{aligned}\right.
 \end{equation}
