--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -210,7 +210,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\lambda$] The validator keys and metadata which were active in the prior epoch. %	λ
   \item[$\rho$] The $\rho$ending reports, per core, which are being made available prior to accumulation. %	ρ
   \begin{description}
-    \item[$\rho^\dagger$] The post-judgement, pre-guarantees-extrinsic intermediate state. %	δ
+    \item[$\rho^\dagger$] The post-judgment, pre-guarantees-extrinsic intermediate state. %	δ
     \item[$\rho^\ddagger$] The post-guarantees-extrinsic, pre-assurances-extrinsic, intermediate state. %	δ
   \end{description}
   \item[$\sigma$] The $\sigma$verall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}. %	σ
@@ -221,7 +221,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
     \item[$\badset$] Work-reports judged to be incorrect.
     \item[$\goodset$] Work-reports judged to be correct.
     \item[$\wonkyset$] Work-reports whose validity is judged to be unknowable.
-    \item[$\offenders$] Validators who made a judgement found to be incorrect.
+    \item[$\offenders$] Validators who made a judgment found to be incorrect.
   \end{description}
   \item[$\chi$] The privileged service indices. %	χ
   \begin{description}
