Formatting for Merklisation

--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -86,11 +86,12 @@ We may then define the basic Merklization function $\mathcal{M}_\sigma$ as:
   M(d: \dict{\mathbb{B}}{(\H, \Y)}) &\equiv \begin{cases}
     \H^0 &\when |d| = 0\\
     \mathcal{H}(\text{bits}^{-1}(L(k, v))) &\when \mathcal{V}(d) = \{ (k, v) \}\\
-    \mathcal{H}(\text{bits}^{-1}(B(M(l), M(r)))) &\otherwise, \where \forall b, p: (b \mapsto p) \in d \Leftrightarrow (b_{1\dots} \mapsto p) \in \begin{cases}
+    \mathcal{H}(\text{bits}^{-1}(B(M(l), M(r)))) &\otherwise\\
+    \multicolumn{2}{l}{\quad\where \forall b, p: (b \mapsto p) \in d \Leftrightarrow (b_{1\dots} \mapsto p) \in \begin{cases}
       l &\when b_0 = 0 \\
       r &\when b_0 = 1
     \end{cases}
-  \end{cases}
+  }\end{cases}
 \end{align}
 
 \section{General Merklization}\label{sec:merklization}
@@ -115,25 +116,25 @@ The astute reader will realize that if our $\Y_n$ happens to be equivalent $\H$ 
 
 We also define the \emph{trace} function $T$, which returns each opposite node from top to bottom as the tree is navigated to arrive at some leaf corresponding to the item of a given index into the sequence. It is useful in creating justifications of data inclusion.
 \begin{equation}
-  \begin{aligned}
-    T\colon\left\{\begin{aligned}
-      (\seq{\Y_n}, \N_{|\mathbf{v}|}, \Y \to \H)\ &\to \seq{\Y_n \cup \H}\\
-      (\mathbf{v}, i, H) &\mapsto \begin{cases}
-        [N(P^\bot(\mathbf{v}, i), H)] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when |\mathbf{v}| > 1\\
-        [] &\otherwise
-      \end{cases}
-    \end{aligned}\right.\\
-    \where\ \left\{\begin{aligned}
-      P^s(\mathbf{v}, i) &\equiv \begin{cases}
-        \mathbf{v}_{\dots\ceil{\nicefrac{|\mathbf{v}|}{2}}} &\when (i < \ceil{\nicefrac{|\mathbf{v}|}{2}}) = s\\
-        \mathbf{v}_{\ceil{\nicefrac{|\mathbf{v}|}{2}}\dots} &\otherwise
-      \end{cases}\\
-      P_I(\mathbf{v}, i) &\equiv \begin{cases}
-        0 &\when i < \ceil{\nicefrac{|\mathbf{v}|}{2}} \\
-        \ceil{\nicefrac{|\mathbf{v}|}{2}} &\otherwise
-      \end{cases}
-    \end{aligned}\right.
-  \end{aligned}
+  T\colon\left\{\begin{aligned}
+    (\seq{\Y_n}, \N_{|\mathbf{v}|}, \Y \to \H)\ &\to \seq{\Y_n \cup \H}\\
+    (\mathbf{v}, i, H) &\mapsto \begin{cases}
+      [N(P^\bot(\mathbf{v}, i), H)] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when |\mathbf{v}| > 1\\
+      [] &\otherwise\\
+      \multicolumn{2}{l}{
+        \begin{aligned}
+          \quad \where P^s(\mathbf{v}, i) &\equiv \begin{cases}
+            \mathbf{v}_{\dots\ceil{\nicefrac{|\mathbf{v}|}{2}}} &\when (i < \ceil{\nicefrac{|\mathbf{v}|}{2}}) = s\\
+            \mathbf{v}_{\ceil{\nicefrac{|\mathbf{v}|}{2}}\dots} &\otherwise
+          \end{cases}\\[4pt]
+          \quad \also P_I(\mathbf{v}, i) &\equiv \begin{cases}
+            0 &\when i < \ceil{\nicefrac{|\mathbf{v}|}{2}} \\
+            \ceil{\nicefrac{|\mathbf{v}|}{2}} &\otherwise
+          \end{cases}\\
+        \end{aligned}
+      }
+    \end{cases}\\
+  \end{aligned}\right.
 \end{equation}
 
 From this we define our other Merklization functions.
