--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -139,7 +139,15 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
   \se(x \in \mathbb{W}) &\equiv \se(x_s, x_x, x_c, x_a, \var{x_o}, \var{x_r}) \\
   \se(x \in \mathbb{P}) &\equiv \se(\var{x_\wp¬authtoken}, \se_4(x_\wp¬authcodehost), x_\wp¬authcodehash, \var{x_\wp¬authparam}, x_\wp¬context, \var{x_\wp¬workitems}) \\
   % TODO: \se_4(i) should be just \se(i), but we should wait for this to be written.
-  \se(x \in \mathbb{I}) &\equiv \se(\se_4(x_s), x_c, \var{x_\mathbf{y}}, \se_8(x_g), \var{\sq{(h, \se_2(i)) \mid (h, i) \orderedin x_\mathbf{i}}}, \var{\sq{(h, \se_4(i)) \mid (h, i) \orderedin x_\mathbf{x}}}, \se_2(x_e)) \\
+  \se(x \in \mathbb{I}) &\equiv \se(
+    \se_4(x_s),
+    x_c,
+    \var{x_\mathbf{y}},
+    \se_8(x_g),
+    \var{\se_I^\#(x_\mathbf{i})},
+    \var{\sq{(h, \se_4(i)) \mid (h, i) \orderedin x_\mathbf{x}}},
+    \se_2(x_e)
+  ) \\
   \se(x \in \mathbb{C}) &\equiv \se(x_\mathbf{y}, x_r) \\
   O(o \in \mathbb{J} \cup \Y) &\equiv \begin{cases}
     (0, \var{o}) &\when o \in \Y \\
@@ -147,6 +155,10 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
     2 &\when o = \panic \\
     3 &\when o = \token{BAD} \\
     4 &\when o = \token{BIG} \\
+  \end{cases}\\
+  \se_I(h \in \H \cup \H^\boxplus, i \in \N_{2^{15}}) &\equiv \begin{cases}
+    (h, \se_2(i)) &\when h \in \H\\
+    (r, \se_2(i + 2^{15})) &\when \exists r \in \H, h = r^\boxplus\\
   \end{cases}
 \end{align}
 
