--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -69,6 +69,8 @@ The \emph{segment-root} ($e$) is the root of a constant-depth, left-biased and z
 
 \subsubsection{Work Result}
 We finally come to define a \emph{work result}, $\mathbb{L}$, which is the data conduit by which services' states may be altered through the computation done within a work-package.
+
+%TODO: make o bold.
 \begin{align}\label{eq:workresult}
   \mathbb{L} &\equiv (s \in \N_S, c \in \H, l \in \H, g \in \N_G, o \in \Y \cup \mathbb{J})
 \end{align}
